@@ -4018,6 +4018,8 @@
 
 /(?(VERSION>=10.0.0)yes|no)/
 
+/(?(VERSION=10.101)yes|no)/
+
 /abcd/I
 
 /abcd/I,no_start_optimize
